# segregatory24.pl

./: .gitignore  Dockerfile  docker-compose.yml  pre-commit.example  pyproject.toml
frontend/src/components/: Testimonials.js
frontend/src/layout/: Header.js  Sidebar.js
