[tool.poetry]
name = "segregatory24.pl"
version = "0.1.0"
description = ""
authors = ["Krzysztof Olszewski <hello@deltacode.pl>"]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.5.2"
Django = "4.0.6"
django-cors-headers = "3.13.0"
djangorestframework = "3.13.1"
Pillow = "9.2.0"
psycopg2-binary = "2.9.3"
python-decouple = "3.6"
pytz = "2022.1"
sqlparse = "0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
